[package]
name = "week3project_backend"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.5.4"
serde = "1.0.132"
ic-cdk-macros = "0.8.4"
reqwest = { version = "0.11.14", features = ["default", "blocking", "cookies", "json", "socks", "stream", "gzip"] }
serde_json = "1.0.68"
tokio = { version = "1.35.1", features = ["macros", "rt"] }
structopt = "0.3.21"
exitfailure = "0.5.1"
serde_derive = "1.0.119"
getrandom = { version = "0.2.3", features = ["js"]}
rand = "0.7.3"



    
